[tool.poetry]
name = "craxcel"
version = "0.1.0"
description = "Python command line application to unlock Microsoft Office password protected files."
authors = ["Pete McGranaghan"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.6.4"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
pytest = "^6.2.5"
flake8 = "^4.0.1"
mypy = "^0.910"
isort = "^5.10.1"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
